<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>pss</groupId>
    <artifactId>pss-parent</artifactId>
    <version>5.1.3-1</version>
    <relativePath>../pom.xml</relativePath>
  </parent>

  <artifactId>pss-parse</artifactId>
	<name>pss-parse</name>
	<packaging>jar</packaging>
  <description>Parser for several PSS Grammars using ANTLR4</description>

  <properties>
    <antlr4.version>4.13.1</antlr4.version>
    <maven.compiler.release>17</maven.compiler.release>
    <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
    <maven.assembly.plugin.version>3.3.0</maven.assembly.plugin.version>
    <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
    <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
    <maven.clean.plugin.version>3.3.2</maven.clean.plugin.version>
    <jacoco.version>0.8.12</jacoco.version>
    <pss.walker.test.verbose>false</pss.walker.test.verbose>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.antlr</groupId>
      <artifactId>antlr4-runtime</artifactId>
      <version>${antlr4.version}</version>
    </dependency>
    <dependency>
      <artifactId>junit</artifactId>
      <groupId>junit</groupId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.9.0</version>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>src/main/java</sourceDirectory>

    <plugins>

      <!-- Ensure stale IDE-side ANTLR caches are removed for deterministic Maven generation -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>${maven.clean.plugin.version}</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>${project.basedir}/src/main/antlr4</directory>
              <includes>
                <include>**/.antlr/**</include>
              </includes>
            </fileset>
          </filesets>
        </configuration>
      </plugin>

      <!-- ANTLR Plugin for Parsers -->
      <plugin>
        <groupId>org.antlr</groupId>
        <artifactId>antlr4-maven-plugin</artifactId>
        <version>${antlr4.version}</version>
        <executions>
          <execution>
            <id>generate-parser-classes</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>antlr4</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/generated-sources/antlr4</outputDirectory>
              <includes>
                <include>sql/SQLSelectParser.g4</include>
                <include>puml3/PUML3.g4</include>
              </includes>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Include generated sources in compilation -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>add-generated-sources</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-sources/antlr4</source>
                </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Java compilation -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin.version}</version>
        <configuration>
          <source>${maven.compiler.release}</source>
          <target>${maven.compiler.release}</target>
          <compilerReuseStrategy>alwaysNew</compilerReuseStrategy>
          <compilerArgument>-Xlint:all</compilerArgument>
          <showWarnings>${maven.compiler.showWarnings}</showWarnings>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>

      <!-- JaCoCo Coverage Instrumentation and Report Generation -->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <id>jacoco-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-report</id>
            <phase>verify</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

     <!-- Add this plugin to configure test execution during PACKAGE Build -->
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.plugin.version}</version>
          <configuration>
              <excludes>
                  <exclude>**/PUML3ParserTest.java</exclude>
                  <exclude>**/DumpNestedCteSymbolGoldensTest.java</exclude>
              </excludes>
              <systemPropertyVariables>
                  <pss.walker.test.verbose>${pss.walker.test.verbose}</pss.walker.test.verbose>
              </systemPropertyVariables>
            </configuration>
     </plugin>

      <!-- JAR with JUNITS for testing -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven.jar.plugin.version}</version>
        <executions>
          <execution>
            <id>test-jar</id>
            <goals>
                <goal>test-jar</goal>
            </goals>
            <configuration>
              <classifier>tests</classifier>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Generate FAT JAR to be able to stand alone and be called by Python and Javascript -->
      <plugin>    
          <groupId>org.apache.maven.plugins</groupId>  
          <artifactId>maven-assembly-plugin</artifactId>
          <version>${maven.assembly.plugin.version}</version>
          <executions>
            <execution>
              <phase>package</phase>  
              <goals>
                <goal>single</goal>
              </goals>
              <configuration>
                <finalName>${project.artifactId}-${project.version}-fat</finalName>
                <appendAssemblyId>false</appendAssemblyId>
                <descriptorRefs>
                  <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
              </configuration>
            </execution>
          </executions>
      </plugin>
    </plugins>
  </build>

  <!-- Oracle Java extension (and mvn -Dtest=...) run single tests via Surefire with -Dtest set.
       Auto-enable walker symbol-tree dumps for those runs; full "mvn test" stays quiet. -->
  <profiles>
    <profile>
      <id>single-test-verbose-walker</id>
      <activation>
        <property>
          <name>test</name>
        </property>
      </activation>
      <properties>
        <pss.walker.test.verbose>true</pss.walker.test.verbose>
      </properties>
    </profile>
    <profile>
      <id>insert-ast-gate</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <test>sql.walker.InsertAstWrapGateTests</test>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>phase15-derived-gate</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <test>sql.walker.Phase15DerivedColumnGateTestSuite</test>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>smoketest-quality-gate</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <test>sql.walker.SmoketestQualityGateTestSuite</test>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
